# mcerd

./: .gitignore  CMakeLists.txt  README.md  elsto.c  erd_detector.c  erd_scattering.c  general.h  init_params.c  ion_simu.c  main.c  output.c  read_detector.c  read_input.c  read_input.h  read_target.c  rough_surface.c  virtual_detector.c
get_espe/: CMakeLists.txt  get_espe.c
pcg/: README
